[package]
name = "file_lookup"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
regex = "1.10"
ignore = "0.4"
anyhow = "1.0"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
fuzzy-matcher = "0.3"
memmap2 = "0.9"
walkdir = "2.4"
indicatif = "0.17"
crossterm = "0.27"
syntect = "5.1"
encoding_rs = "0.8"
mime_guess = "2.0"
console = "0.15"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"